# serializer version: 1
# name: TestPyfixest.test_fixed_effects_html
  '''
  &lt;div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;"&gt;
  &lt;style&gt;
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md&gt; :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md&gt; :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  &lt;/style&gt;
  &lt;table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false"&gt;
  &lt;thead&gt;
  
  &lt;tr class="gt_col_headings gt_spanner_row"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""&gt;&lt;/th&gt;
    &lt;th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y"&gt;
      &lt;span class="gt_column_spanner"&gt;y&lt;/span&gt;
    &lt;/th&gt;
  &lt;/tr&gt;
  &lt;tr class="gt_col_headings"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0"&gt;(1)&lt;/th&gt;
  &lt;/tr&gt;
  &lt;/thead&gt;
  &lt;tbody class="gt_table_body"&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="2"&gt;coef&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;x&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;2.100*** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="2"&gt;fe&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;group&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;x&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="2"&gt;stats&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Observations&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;100&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;R&lt;sup&gt;2&lt;/sup&gt;&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;1&lt;/td&gt;
    &lt;/tr&gt;
  &lt;/tbody&gt;
    &lt;tfoot class="gt_sourcenotes"&gt;
    
    &lt;tr&gt;
      &lt;td class="gt_sourcenote" colspan="2"&gt;Significance levels: * $p &lt; 0.1$, ** $p &lt; 0.05$, *** $p &lt; 0.01$. Format of coefficient cell: Coefficient   (Std. Error)&lt;/td&gt;
    &lt;/tr&gt;
  
  &lt;/tfoot&gt;
  
  &lt;/table&gt;
  
  &lt;/div&gt;
          
  '''
# ---
# name: TestPyfixest.test_fixed_effects_latex
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  group & x \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  R² & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * $p < 0.1$, ** $p < 0.05$, *** $p < 0.01$. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestPyfixest.test_multi_fixest_with_stepwise_html
  '''
  &lt;div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;"&gt;
  &lt;style&gt;
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md&gt; :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md&gt; :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  &lt;/style&gt;
  &lt;table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false"&gt;
  &lt;thead&gt;
  
  &lt;tr class="gt_col_headings gt_spanner_row"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""&gt;&lt;/th&gt;
    &lt;th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="6" scope="colgroup" id="Y"&gt;
      &lt;span class="gt_column_spanner"&gt;Y&lt;/span&gt;
    &lt;/th&gt;
  &lt;/tr&gt;
  &lt;tr class="gt_col_headings"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0"&gt;(1)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="1"&gt;(2)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="2"&gt;(3)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="3"&gt;(4)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="4"&gt;(5)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="5"&gt;(6)&lt;/th&gt;
  &lt;/tr&gt;
  &lt;/thead&gt;
  &lt;tbody class="gt_table_body"&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="7"&gt;coef&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;X1&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;0.862*** &lt;br&gt; (0.225)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.736** &lt;br&gt; (0.206)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.947*** &lt;br&gt; (0.217)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;X2&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-0.209*** &lt;br&gt; (0.052)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-0.147*** &lt;br&gt; (0.039)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-0.210*** &lt;br&gt; (0.043)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Intercept&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;0.929*** &lt;br&gt; (0.272)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;1.560*** &lt;br&gt; (0.180)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="7"&gt;fe&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;f1&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;x&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;x&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;f2&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;x&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;x&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="7"&gt;stats&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Observations&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;98&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;97&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;98&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;99&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;98&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;99&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;R&lt;sup&gt;2&lt;/sup&gt;&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;0.133&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.614&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.162&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.145&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.574&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.157&lt;/td&gt;
    &lt;/tr&gt;
  &lt;/tbody&gt;
    &lt;tfoot class="gt_sourcenotes"&gt;
    
    &lt;tr&gt;
      &lt;td class="gt_sourcenote" colspan="7"&gt;Significance levels: * $p &lt; 0.1$, ** $p &lt; 0.05$, *** $p &lt; 0.01$. Format of coefficient cell: Coefficient   (Std. Error)&lt;/td&gt;
    &lt;/tr&gt;
  
  &lt;/tfoot&gt;
  
  &lt;/table&gt;
  
  &lt;/div&gt;
          
  '''
# ---
# name: TestPyfixest.test_multi_fixest_with_stepwise_latex
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{6}{c}{Y} \\
  \cmidrule(lr){2-7}
   & (1) & (2) & (3) & (4) & (5) & (6) \\
  \midrule
  \addlinespace[1ex]
  X1 & \makecell{0.862*** \\ (0.225)} & \makecell{0.736** \\ (0.206)} & \makecell{0.947*** \\ (0.217)} &  &  &  \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  X2 &  &  &  & \makecell{-0.209*** \\ (0.052)} & \makecell{-0.147*** \\ (0.039)} & \makecell{-0.210*** \\ (0.043)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.929*** \\ (0.272)} &  &  & \makecell{1.560*** \\ (0.180)} &  &  \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  f1 & - & x & - & - & x & - \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  f2 & - & - & x & - & - & x \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 98 & 97 & 98 & 99 & 98 & 99 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  R² & 0.133 & 0.614 & 0.162 & 0.145 & 0.574 & 0.157 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * $p < 0.1$, ** $p < 0.05$, *** $p < 0.01$. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestPyfixest.test_multi_model_html
  '''
  &lt;div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;"&gt;
  &lt;style&gt;
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md&gt; :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md&gt; :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  &lt;/style&gt;
  &lt;table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false"&gt;
  &lt;thead&gt;
  
  &lt;tr class="gt_col_headings gt_spanner_row"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""&gt;&lt;/th&gt;
    &lt;th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="2" scope="colgroup" id="y"&gt;
      &lt;span class="gt_column_spanner"&gt;y&lt;/span&gt;
    &lt;/th&gt;
  &lt;/tr&gt;
  &lt;tr class="gt_col_headings"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0"&gt;(1)&lt;/th&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="1"&gt;(2)&lt;/th&gt;
  &lt;/tr&gt;
  &lt;/thead&gt;
  &lt;tbody class="gt_table_body"&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="3"&gt;coef&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;x&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;2.100*** &lt;br&gt; (0.000)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;2.100*** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;group=B&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;-0.000*** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Intercept&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;0.000** &lt;br&gt; (0.000)&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;0.000*** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="3"&gt;stats&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Observations&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;100&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;100&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;R&lt;sup&gt;2&lt;/sup&gt;&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;1&lt;/td&gt;
      &lt;td class="gt_row gt_center"&gt;1&lt;/td&gt;
    &lt;/tr&gt;
  &lt;/tbody&gt;
    &lt;tfoot class="gt_sourcenotes"&gt;
    
    &lt;tr&gt;
      &lt;td class="gt_sourcenote" colspan="3"&gt;Significance levels: * $p &lt; 0.1$, ** $p &lt; 0.05$, *** $p &lt; 0.01$. Format of coefficient cell: Coefficient   (Std. Error)&lt;/td&gt;
    &lt;/tr&gt;
  
  &lt;/tfoot&gt;
  
  &lt;/table&gt;
  
  &lt;/div&gt;
          
  '''
# ---
# name: TestPyfixest.test_multi_model_latex
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{2}{c}{y} \\
  \cmidrule(lr){2-3}
   & (1) & (2) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  group=B &  & \makecell{-0.000*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.000** \\ (0.000)} & \makecell{0.000*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  R² & 1 & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * $p < 0.1$, ** $p < 0.05$, *** $p < 0.01$. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
# name: TestPyfixest.test_single_model_html
  '''
  &lt;div id="STABLE_ID" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;"&gt;
  &lt;style&gt;
  #STABLE_ID table {
            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Helvetica Neue', 'Fira Sans', 'Droid Sans', Arial, sans-serif;
            -webkit-font-smoothing: antialiased;
            -moz-osx-font-smoothing: grayscale;
          }
  
  #STABLE_ID thead, tbody, tfoot, tr, td, th { border-style: none; }
   tr { background-color: transparent; }
  #STABLE_ID p { margin: 0; padding: 0; }
   #STABLE_ID .gt_table { display: table; border-collapse: collapse; line-height: normal; margin-left: auto; margin-right: auto; color: #333333; font-size: 16px; font-weight: normal; font-style: normal; background-color: #FFFFFF; width: auto; border-top-style: solid; border-top-width: 2px; border-top-color: #A8A8A8; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; border-bottom-style: hidden; border-bottom-width: 2px; border-bottom-color: #A8A8A8; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; }
   #STABLE_ID .gt_caption { padding-top: 4px; padding-bottom: 4px; }
   #STABLE_ID .gt_title { color: #333333; font-size: 16px; font-weight: initial; padding-top: 6px; padding-bottom: 6px; padding-left: 5px; padding-right: 5px; border-bottom-color: #FFFFFF; border-bottom-width: 0; }
   #STABLE_ID .gt_subtitle { color: #333333; font-size: 85%; font-weight: initial; padding-top: 5px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; border-top-color: #FFFFFF; border-top-width: 0; }
   #STABLE_ID .gt_heading { background-color: #FFFFFF; text-align: center; border-bottom-color: #FFFFFF; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_bottom_border { border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: #D3D3D3; }
   #STABLE_ID .gt_col_headings { border-top-style: solid; border-top-width: 2px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 1px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_col_heading { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: bottom; padding-top: 2px; padding-bottom: 7px; padding-left: 5px; padding-right: 5px; overflow-x: hidden; }
   #STABLE_ID .gt_column_spanner_outer { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: normal; text-transform: inherit; padding-top: 0; padding-bottom: 0; padding-left: 4px; padding-right: 4px; }
   #STABLE_ID .gt_column_spanner_outer:first-child { padding-left: 0; }
   #STABLE_ID .gt_column_spanner_outer:last-child { padding-right: 0; }
   #STABLE_ID .gt_column_spanner { border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: bottom; padding-top: 2px; padding-bottom: 2px; overflow-x: hidden; display: inline-block; width: 100%; }
   #STABLE_ID .gt_spanner_row { border-bottom-style: hidden; }
   #STABLE_ID .gt_group_heading { padding-top: 0px; padding-bottom: 0px; padding-left: 5px; padding-right: 5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; text-transform: inherit; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; border-left-style: none; border-left-width: 1px; border-left-color: white; border-right-style: none; border-right-width: 1px; border-right-color: white; vertical-align: middle; text-align: left; }
   #STABLE_ID .gt_empty_group_heading { padding: 0.5px; color: #333333; background-color: #FFFFFF; font-size: 0px; font-weight: initial; border-top-style: solid; border-top-width: 0.25px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 0.25px; border-bottom-color: black; vertical-align: middle; }
   #STABLE_ID .gt_from_md&gt; :first-child { margin-top: 0; }
   #STABLE_ID .gt_from_md&gt; :last-child { margin-bottom: 0; }
   #STABLE_ID .gt_row { padding-top: 2px; padding-bottom: 2px; padding-left: 5px; padding-right: 5px; margin: 10px; border-top-style: none; border-top-width: 1px; border-top-color: #D3D3D3; border-left-style: none; border-left-width: 0px; border-left-color: white; border-right-style: none; border-right-width: 0px; border-right-color: white; vertical-align: middle; overflow-x: hidden; }
   #STABLE_ID .gt_stub { color: #333333; background-color: #FFFFFF; font-size: 16px; font-weight: initial; text-transform: inherit; border-right-style: hidden; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; }
   #STABLE_ID .gt_stub_row_group { color: #333333; background-color: #FFFFFF; font-size: 100%; font-weight: initial; text-transform: inherit; border-right-style: solid; border-right-width: 2px; border-right-color: #D3D3D3; padding-left: 5px; padding-right: 5px; vertical-align: top; }
   #STABLE_ID .gt_row_group_first td { border-top-width: 0.25px; }
   #STABLE_ID .gt_row_group_first th { border-top-width: 0.25px; }
   #STABLE_ID .gt_striped { background-color: rgba(128,128,128,0.05); }
   #STABLE_ID .gt_table_body { border-top-style: solid; border-top-width: 0px; border-top-color: black; border-bottom-style: solid; border-bottom-width: 2px; border-bottom-color: black; }
   #STABLE_ID .gt_sourcenotes { color: #333333; background-color: #FFFFFF; border-bottom-style: none; border-bottom-width: 2px; border-bottom-color: #D3D3D3; border-left-style: none; border-left-width: 2px; border-left-color: #D3D3D3; border-right-style: none; border-right-width: 2px; border-right-color: #D3D3D3; }
   #STABLE_ID .gt_sourcenote { font-size: 10px; padding-top: 4px; padding-bottom: 4px; padding-left: 5px; padding-right: 5px; text-align: left; }
   #STABLE_ID .gt_left { text-align: left; }
   #STABLE_ID .gt_center { text-align: center; }
   #STABLE_ID .gt_right { text-align: right; font-variant-numeric: tabular-nums; }
   #STABLE_ID .gt_font_normal { font-weight: normal; }
   #STABLE_ID .gt_font_bold { font-weight: bold; }
   #STABLE_ID .gt_font_italic { font-style: italic; }
   #STABLE_ID .gt_super { font-size: 65%; }
   #STABLE_ID .gt_footnote_marks { font-size: 75%; vertical-align: 0.4em; position: initial; }
   #STABLE_ID .gt_asterisk { font-size: 100%; vertical-align: 0; }
   
  &lt;/style&gt;
  &lt;table class="gt_table" data-quarto-disable-processing="false" data-quarto-bootstrap="false"&gt;
  &lt;thead&gt;
  
  &lt;tr class="gt_col_headings gt_spanner_row"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_left" rowspan="2" colspan="1" scope="col" id=""&gt;&lt;/th&gt;
    &lt;th class="gt_center gt_columns_top_border gt_column_spanner_outer" rowspan="1" colspan="1" scope="col" id="y"&gt;
      &lt;span class="gt_column_spanner"&gt;y&lt;/span&gt;
    &lt;/th&gt;
  &lt;/tr&gt;
  &lt;tr class="gt_col_headings"&gt;
    &lt;th class="gt_col_heading gt_columns_bottom_border gt_center" rowspan="1" colspan="1" scope="col" id="0"&gt;(1)&lt;/th&gt;
  &lt;/tr&gt;
  &lt;/thead&gt;
  &lt;tbody class="gt_table_body"&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="2"&gt;coef&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;x&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;2.100*** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Intercept&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;0.000** &lt;br&gt; (0.000)&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr class="gt_group_heading_row"&gt;
      &lt;th class="gt_group_heading" colspan="2"&gt;stats&lt;/th&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;Observations&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;100&lt;/td&gt;
    &lt;/tr&gt;
    &lt;tr&gt;
      &lt;th class="gt_row gt_left gt_stub"&gt;R&lt;sup&gt;2&lt;/sup&gt;&lt;/th&gt;
      &lt;td class="gt_row gt_center"&gt;1&lt;/td&gt;
    &lt;/tr&gt;
  &lt;/tbody&gt;
    &lt;tfoot class="gt_sourcenotes"&gt;
    
    &lt;tr&gt;
      &lt;td class="gt_sourcenote" colspan="2"&gt;Significance levels: * $p &lt; 0.1$, ** $p &lt; 0.05$, *** $p &lt; 0.01$. Format of coefficient cell: Coefficient   (Std. Error)&lt;/td&gt;
    &lt;/tr&gt;
  
  &lt;/tfoot&gt;
  
  &lt;/table&gt;
  
  &lt;/div&gt;
          
  '''
# ---
# name: TestPyfixest.test_single_model_latex
  '''
  \begin{threeparttable}
  \begingroup
  \renewcommand\cellalign{t}
  \renewcommand\arraystretch{1}
  \setlength{\tabcolsep}{3pt}
  \begin{tabularx}{\linewidth}{@{}>{\raggedright\arraybackslash}l>{\centering\arraybackslash}X}
  \toprule
   & \multicolumn{1}{c}{y} \\
  \cmidrule(lr){2-2}
   & (1) \\
  \midrule
  \addlinespace[1ex]
  x & \makecell{2.100*** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  Intercept & \makecell{0.000** \\ (0.000)} \\
  \addlinespace[0.5ex]
  \midrule
  \addlinespace[1ex]
  Observations & 100 \\
  \addlinespace[0.5ex]
  \addlinespace[0.5ex]
  R² & 1 \\
  \addlinespace[0.5ex]
  \bottomrule
  \end{tabularx}
  \endgroup
  \noindent\begin{minipage}{\linewidth}\smallskip\footnotesize
  Significance levels: * $p < 0.1$, ** $p < 0.05$, *** $p < 0.01$. Format of coefficient cell: Coefficient   (Std. Error)\end{minipage}
  
  \end{threeparttable}
  '''
# ---
